# hascheme

./: .gitignore  LICENSE  README.md  cabal.config  hascheme.cabal  test.hs  test.scm  todo.txt
app/: Main.hs
lib/: stdlib.scm
src/: DataTypes.hs  Eval.hs  Lists.hs  Numbers.hs  Parse.hs  ParseNumber.hs  ParserCombinators.hs  Primitives.hs  Strings.hs  Util.hs  Vector.hs
test/: Spec.hs
test/Data/: ParseSpec.hs  ParserCombinatorsSpec.hs
