name:                hascheme
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hascheme#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          lib/*.scm

library
  hs-source-dirs:      src
  exposed-modules:     ParserCombinators
                     , Parse
                     , DataTypes
                     , ParseNumber
                     , Eval
                     , Primitives
                     , Numbers
                     , Strings
                     , Util
                     , Lists
  other-modules:     Paths_hascheme
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , haskeline
  default-language:    Haskell2010

executable hascheme
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hascheme
                     , mtl
                     , haskeline
  default-language:    Haskell2010

test-suite hascheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Data.ParserCombinatorsSpec
                     , Data.ParseSpec
  main-is:             Spec.hs
  build-depends:       base
                     , hascheme
                     , hspec == 2.*
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fhpc
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hascheme
